--- a/index.html
+++ b/index.html
@@ -2,15 +2,28 @@
 <html lang="ja">
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width,initial-scale=1">
         <title>Celar</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Sawarabi+Gothic&family=Sawarabi+Mincho&display=swap" rel="stylesheet">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+        <script src="https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.js"></script>
+        <link href="https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.css" rel="stylesheet"/>
+        <script src="/auth.js"></script>
         <link href="/css/main.css" rel="stylesheet">
-        <script src="/script/test.js"></script>
+        <script src="/script/location.js"></script>
     </head>
     <body>
-        Celar<br>
-        <button onclick="action()">Check</button>
+        <h1>Celar</h1>
+        <button onclick="setLocationWatch()">Start watching</button>
+        <button onclick="clearLocationWatch()">Stop watching</button>
+        <button onclick="createMap()">Create Map</button>
+        <div id="loc"></div>
+        <div id="map"></div>
+        <template id="marker">
+            <img id="marker-icon" class="map-icon" src="/image/marker.png" alt="marker">
+        </template>
     </body>
+    <script src="/script/map.js"></script>
 </html>
