websocketっぽいものを追加

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
         <title>Celar</title>
+        <script src="/script/websocket.js"></script>
         <link rel="manifest" href="manifest.json">
         <script src="/script/sw_register.js"></script>
         <link rel="icon" type="image/png" href="/icon.png">
