ちょっとした修正

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
         <title>Celar</title>
-        <script src="/script/websocket.js"></script>
+        <script src="/auth.js"></script>
+        <script src="/script/pass.js"></script>
         <link rel="manifest" href="manifest.json">
         <script src="/script/sw_register.js"></script>
         <link rel="icon" type="image/png" href="/icon.png">
@@ -17,10 +18,10 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script src="https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.js"></script>
         <link href="https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.css" rel="stylesheet"/>
-        <script src="/auth.js"></script>
         <link href="/css/main.css" rel="stylesheet">
         <link href="/css/map.css" rel="stylesheet">
         <script src="/script/location.js"></script>
+        <script src="/script/websocket.js"></script>
     </head>
     <body>
         <div id="map"></div>
