--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <img class="current" src="/sprite/location_on_black_24dp.svg" alt="Current position" onclick="positionReset()">
         <div class="info">
             !DeveloperTools!<br>
-            <a href="javascript:register()">Register</a>/<a href="javascript:localStorage.removeItem('account'); location.reload();">Reset</a>
+            <a href="javascript:register()">Register</a>/<a href="javascript:localStorage.removeItem('account'); location.reload();">Reset</a>/<a href="javascript:location.reload();">Reload</a>
             <a href="javascript:addFriend();">AddFriend</a>/<a href="javascript:addFriend();">DelFriend</a>
             <a href="javascript:alert(`Your UUID: ${account.uuid}\nYour registed users: ${Object.keys(markers)} (${users.length})`);">UserInfo</a>
         </div>
