--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
         <link href="/css/map.css" rel="stylesheet">
         <script src="/script/location.js"></script>
         <script src="/script/websocket.js"></script>
-        <script src="/script/general.js"></script>
     </head>
     <body>
         <div id="map"></div>
@@ -34,12 +33,14 @@
                 <div id="speed" class="marker-speed"></div>
             </div>
         </template>
-        <img class="current" src="/sprite/location_on_black_24dp.svg" alt="Current position" onclick="positionReset()">
+        <img class="current" src="/sprite/near_me_FILL0_wght400_GRAD0_opsz48.svg" alt="Current position" onclick="positionReset()">
         <div class="info">
             [DeveloperTools]<br>
             <a href="javascript:register()">Register</a>/<a href="javascript:localStorage.removeItem('account'); location.reload();">Reset</a>/<a href="javascript:location.reload();">Reload</a>
             <a href="javascript:addFriend();">AddFriend</a>/<a href="javascript:addFriend();">DelFriend</a>
-            <a href="javascript:alert(`Your UUID: ${account.uuid}\nYour registed users: ${Object.keys(markers)} (${users.length})`);">UserInfo</a>
+            <a href="javascript:alert(`Your UUID: ${account.uuid}\nYour registed users: ${Object.keys(markers)} (${users.length})`);">UserInfo</a>/<a href="javascript:selectFile()">ChangeIcon</a>
         </div>
+        <input style="display: none;" type="file" id="iconfile" name="iconfile" accept="image/jpeg, image/png">
+        <script src="/script/general.js"></script>
     </body>
 </html>
