--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Sawarabi+Gothic&family=Sawarabi+Mincho&display=swap" rel="stylesheet">
         <link href="/css/main.css" rel="stylesheet">
         <link href="/css/map.css" rel="stylesheet">
+        <link href="/css/modal.css" rel="stylesheet">
         <script src="/script/location.js"></script>
         <script src="/script/websocket.js"></script>
     </head>
@@ -36,11 +37,13 @@
         <img class="current" src="/sprite/near_me_FILL0_wght400_GRAD0_opsz48.svg" alt="Current position" onclick="positionReset()">
         <div class="info">
             [DeveloperTools]<br>
-            <a href="javascript:register()">Register</a>/<a href="javascript:localStorage.removeItem('account'); location.reload();">Reset</a>/<a href="javascript:location.reload();">Reload</a>
+            <a href="javascript:localStorage.removeItem('account'); location.reload();">Logout</a>/<a href="javascript:location.reload();">Reload</a>
             <a href="javascript:addFriend();">AddFriend</a>/<a href="javascript:delFriend();">DelFriend</a>
             <a href="javascript:alert(`Your UUID: ${account.uid}\nYour registed users: ${Object.keys(markers)} (${users.length})`);">UserInfo</a>/<a href="javascript:selectFile()">ChangeIcon</a>
         </div>
         <input style="display: none;" type="file" id="iconfile" name="iconfile" accept="image/jpeg, image/png">
+        <div id="overlay" class="overlay-hide"></div>
+        <div id="modal" class="mdoal-hide"></div>
         <script src="/script/general.js"></script>
     </body>
 </html>
