--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     <body>
         <div id="map"></div>
         <template id="marker" class="marker">
-            <div>
-                <img id="marker-icon" class="map-icon" alt="marker" style="width: 50px; height: 50px;">
+            <div style="width: 50px; height: 50px;">
+                <img id="marker-icon" class="map-icon marker-offline" alt="marker" style="width: 50px; height: 50px;">
                 <div id="speed" class="marker-speed"></div>
             </div>
         </template>
